--- a/views/home2.ejs
+++ b/views/home2.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simons Game - Memory Challenge</title>
+    <title>Simons Game Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,6 +22,8 @@
       body {
         /* font-family: "Orbitron", monospace; */
         font-family: "Michroma", sans-serif;
+        /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial, sans-serif; */
 
         background: linear-gradient(
           135deg,
