--- a/views/user.ejs
+++ b/views/user.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simon's Game - Enter the Arena</title>
+    <title>Simons Game-Enter the Arena</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap");
 
@@ -14,7 +14,11 @@
       }
 
       body {
-        font-family: "Orbitron", monospace;
+        /* font-family: "Orbitron", monospace; */
+        /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial, sans-serif; */
+        font-family: "Michroma", sans-serif;
+
         background: linear-gradient(
           135deg,
           #0a0a0a 0%,
@@ -100,9 +104,8 @@
         font-size: 2.5rem;
         font-weight: 900;
         color: #00ffff;
-        text-shadow: 0 0 20px #00ffff;
+        text-shadow: 0 0 20px #515d5d;
         margin-bottom: 10px;
-        animation: glow-text 2s ease-in-out infinite alternate;
       }
 
       @keyframes glow-text {
